Worked on the changes mentioned below 1. Created new skill for Voice Reader and updated the response message in rails app. accordingly 2. Updated URLs and text in the portal side from "Voice Chimp" to "Voice Reader" 3. Worked on changes mentioned in the Login screen (Need Gaurav's guidance to create a new section in carrd.co for LaunchVoiceFirst site in order to take the signup link to LVF signup section directly) 4. Fixed alignment issue in footer 5. Updated Card changes mentioned(voice reader in the light font and studio in bold font)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -169,6 +169,12 @@ input[type="text"], textarea, select, button {
 
 
 // Bootstrap overridden
+.btn-outline-primary, .btn-outline-primary:hover, .btn-outline-primary:active, .btn-outline-primary:visited {
+    background-color: #61318f !important;
+    color: #fff;
+    border-color: #61318f !important;
+    padding: 3px 6px 3px 6px !important;
+}
 
 .btn-purple {
     color: #fff;
